# Smart-UV-Projection

./: LICENSE  README.md  build_wheels.py  pyproject.toml
.github/workflows/: wheels.yml
smart_uv/: __init__.py  smart_uv.py
smart_uv_projection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
