[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-uv-projection"
version = "0.1.1"
authors = [
  { name="Aero-Ex" },
]
description = "A pure Python implementation of Blender's Smart UV Project algorithm with Alpaca packing."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "numpy",
    "scipy",
    "trimesh",
    "rectpack",
]

[project.urls]
"Homepage" = "https://github.com/Aero-Ex/Smart-UV-Projection"
"Bug Tracker" = "https://github.com/Aero-Ex/Smart-UV-Projection/issues"
